--- a/defconfig/rockchip64_defconfig
+++ b/defconfig/rockchip64_defconfig
@@ -5,6 +5,7 @@ CONFIG_USELIB=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_PREEMPT=y
+CONFIG_SCHED_THERMAL_PRESSURE=y
 CONFIG_BSD_PROCESS_ACCT=y
 CONFIG_BSD_PROCESS_ACCT_V3=y
 CONFIG_TASK_XACCT=y
@@ -33,33 +34,55 @@ CONFIG_SCHED_AUTOGROUP=y
 CONFIG_RELAY=y
 CONFIG_BOOT_CONFIG=y
 CONFIG_EXPERT=y
-# CONFIG_SGETMASK_SYSCALL is not set
 CONFIG_KALLSYMS_ALL=y
 CONFIG_BPF_LSM=y
 CONFIG_BPF_SYSCALL=y
 # CONFIG_COMPAT_BRK is not set
 CONFIG_PROFILING=y
-CONFIG_SMP=y
-CONFIG_NR_CPUS=256
+CONFIG_ARCH_ROCKCHIP=y
+CONFIG_ARM64_VA_BITS_48=y
+CONFIG_SCHED_MC=y
 CONFIG_NUMA=y
-CONFIG_NODES_SHIFT=4
+CONFIG_SECCOMP=y
 CONFIG_KEXEC=y
 CONFIG_CRASH_DUMP=y
-# CONFIG_RANDOMIZE_BASE is not set
+CONFIG_XEN=y
+CONFIG_COMPAT=y
+CONFIG_ARMV8_DEPRECATED=y
+CONFIG_SWP_EMULATION=y
+CONFIG_CP15_BARRIER_EMULATION=y
+CONFIG_SETEND_EMULATION=y
+# CONFIG_EFI is not set
 CONFIG_HIBERNATION=y
+CONFIG_CPU_IDLE=y
+CONFIG_ARM_CPUIDLE=y
+CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPUFREQ_DT=m
-# CONFIG_FIRMWARE_MEMMAP is not set
+CONFIG_ARM_SCPI_CPUFREQ=y
+CONFIG_ARM_SCPI_PROTOCOL=y
+CONFIG_VIRTUALIZATION=y
 CONFIG_KVM=y
+CONFIG_CRYPTO_SHA512_ARM64=y
+CONFIG_CRYPTO_SHA1_ARM64_CE=y
+CONFIG_CRYPTO_SHA2_ARM64_CE=y
+CONFIG_CRYPTO_SHA3_ARM64=m
+CONFIG_CRYPTO_SM3_ARM64_CE=m
+CONFIG_CRYPTO_SM4_ARM64_CE=m
+CONFIG_CRYPTO_GHASH_ARM64_CE=y
+CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
+CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
+CONFIG_CRYPTO_CHACHA20_NEON=y
+CONFIG_CRYPTO_NHPOLY1305_NEON=m
+CONFIG_CRYPTO_AES_ARM64_BS=y
 CONFIG_JUMP_LABEL=y
-CONFIG_COMPAT_32BIT_TIME=y
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
-# CONFIG_UNUSED_SYMBOLS is not set
 CONFIG_BLK_DEV_ZONED=y
 CONFIG_BLK_DEV_THROTTLING=y
 CONFIG_BLK_WBT=y
@@ -339,6 +362,26 @@ CONFIG_IP_NF_ARP_MANGLE=m
 CONFIG_NFT_DUP_IPV6=m
 CONFIG_NFT_FIB_IPV6=m
 CONFIG_NF_FLOW_TABLE_IPV6=m
+CONFIG_IP6_NF_MATCH_AH=m
+CONFIG_IP6_NF_MATCH_EUI64=m
+CONFIG_IP6_NF_MATCH_FRAG=m
+CONFIG_IP6_NF_MATCH_OPTS=m
+CONFIG_IP6_NF_MATCH_HL=m
+CONFIG_IP6_NF_MATCH_IPV6HEADER=m
+CONFIG_IP6_NF_MATCH_MH=m
+CONFIG_IP6_NF_MATCH_RPFILTER=m
+CONFIG_IP6_NF_MATCH_RT=m
+CONFIG_IP6_NF_MATCH_SRH=m
+CONFIG_IP6_NF_TARGET_HL=m
+CONFIG_IP6_NF_FILTER=m
+CONFIG_IP6_NF_TARGET_REJECT=m
+CONFIG_IP6_NF_TARGET_SYNPROXY=m
+CONFIG_IP6_NF_MANGLE=m
+CONFIG_IP6_NF_RAW=m
+CONFIG_IP6_NF_SECURITY=m
+CONFIG_IP6_NF_NAT=m
+CONFIG_IP6_NF_TARGET_MASQUERADE=m
+CONFIG_IP6_NF_TARGET_NPT=m
 CONFIG_DECNET_NF_GRABULATOR=m
 CONFIG_NF_TABLES_BRIDGE=m
 CONFIG_NFT_BRIDGE_META=m
@@ -521,6 +564,7 @@ CONFIG_CAN_VXCAN=m
 CONFIG_CAN_SLCAN=m
 CONFIG_CAN_GRCAN=m
 CONFIG_CAN_KVASER_PCIEFD=m
+CONFIG_CAN_XILINXCAN=m
 CONFIG_CAN_C_CAN=m
 CONFIG_CAN_C_CAN_PLATFORM=m
 CONFIG_CAN_C_CAN_PCI=m
@@ -594,6 +638,7 @@ CONFIG_RFKILL_INPUT=y
 CONFIG_RFKILL_GPIO=m
 CONFIG_NET_9P=m
 CONFIG_NET_9P_VIRTIO=m
+CONFIG_NET_9P_XEN=m
 CONFIG_CEPH_LIB_USE_DNS_RESOLVER=y
 CONFIG_NFC=m
 CONFIG_NFC_DIGITAL=m
@@ -626,14 +671,17 @@ CONFIG_NFC_ST95HF=m
 CONFIG_PCI=y
 CONFIG_PCIEPORTBUS=y
 CONFIG_PCIEASPM_PERFORMANCE=y
-CONFIG_PCI_MSI=y
 CONFIG_PCI_IOV=y
 CONFIG_HOTPLUG_PCI=y
+CONFIG_PCIE_ROCKCHIP_HOST=y
+CONFIG_PCIE_ROCKCHIP_EP=y
 CONFIG_PCI_ENDPOINT=y
 CONFIG_PCI_ENDPOINT_CONFIGFS=y
 CONFIG_UEVENT_HELPER=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
+CONFIG_BRCMSTB_GISB_ARB=y
+CONFIG_VEXPRESS_CONFIG=y
 CONFIG_MHI_BUS=m
 CONFIG_GNSS=m
 CONFIG_GNSS_MTK_SERIAL=m
@@ -643,7 +691,7 @@ CONFIG_MTD=y
 CONFIG_MTD_BLOCK=y
 CONFIG_MTD_SPI_NOR=y
 CONFIG_MTD_HYPERBUS=m
-CONFIG_OF=y
+CONFIG_HBMC_AM654=m
 CONFIG_ZRAM=m
 CONFIG_ZRAM_WRITEBACK=y
 CONFIG_BLK_DEV_UMEM=m
@@ -656,6 +704,7 @@ CONFIG_BLK_DEV_SX8=m
 CONFIG_BLK_DEV_RAM=m
 CONFIG_BLK_DEV_RAM_COUNT=8
 CONFIG_ATA_OVER_ETH=m
+CONFIG_XEN_BLKDEV_BACKEND=m
 CONFIG_VIRTIO_BLK=y
 CONFIG_BLK_DEV_RBD=m
 CONFIG_BLK_DEV_RSXX=m
@@ -683,13 +732,14 @@ CONFIG_HABANA_AI=m
 CONFIG_BLK_DEV_SD=y
 CONFIG_BLK_DEV_SR=m
 CONFIG_CHR_DEV_SG=m
-CONFIG_SCSI_SAS_LIBSAS=y
 CONFIG_SCSI_SAS_ATA=y
+CONFIG_SCSI_HISI_SAS=y
 CONFIG_SCSI_FDOMAIN_PCI=m
 CONFIG_ATA=y
 CONFIG_SATA_AHCI=y
 CONFIG_SATA_AHCI_PLATFORM=y
 CONFIG_AHCI_CEVA=y
+CONFIG_AHCI_XGENE=y
 CONFIG_AHCI_QORIQ=y
 CONFIG_SATA_SIL24=y
 CONFIG_PATA_PLATFORM=y
@@ -807,36 +857,52 @@ CONFIG_MACB=y
 CONFIG_THUNDER_NIC_PF=y
 CONFIG_CAVIUM_PTP=y
 CONFIG_DL2K=m
+CONFIG_HIX5HD2_GMAC=y
+CONFIG_HNS_DSAF=y
+CONFIG_HNS_ENET=y
 CONFIG_E1000E=y
 CONFIG_IGB=y
 CONFIG_IGBVF=y
 CONFIG_MVMDIO=y
 CONFIG_SKY2=y
+CONFIG_OCTEONTX2_PF=m
+CONFIG_OCTEONTX2_VF=m
 CONFIG_ENC28J60=m
 CONFIG_ENC28J60_WRITEVERIFY=y
 CONFIG_MSCC_OCELOT_SWITCH=m
+CONFIG_MSCC_OCELOT_SWITCH_OCELOT=m
 CONFIG_IONIC=m
 CONFIG_QCA7000_UART=m
 CONFIG_QCOM_EMAC=m
 CONFIG_ROCKER=m
+CONFIG_SMC91X=y
 CONFIG_SMSC911X=y
 CONFIG_STMMAC_ETH=m
 CONFIG_XILINX_AXI_EMAC=m
 CONFIG_XILINX_LL_TEMAC=m
+CONFIG_MDIO_BITBANG=y
+CONFIG_MDIO_BUS_MUX_MMIOREG=y
+CONFIG_MDIO_BUS_MUX_MULTIPLEXER=m
+CONFIG_MDIO_IPQ8064=m
+CONFIG_MDIO_MSCC_MIIM=m
+CONFIG_MDIO_MVUSB=m
 CONFIG_LED_TRIGGER_PHY=y
 CONFIG_SFP=m
-CONFIG_AMD_PHY=m
 CONFIG_ADIN_PHY=m
+CONFIG_AMD_PHY=m
 CONFIG_AQUANTIA_PHY=m
 CONFIG_AX88796B_PHY=m
+CONFIG_BCM87XX_PHY=m
 CONFIG_BROADCOM_PHY=m
 CONFIG_BCM84881_PHY=m
-CONFIG_BCM87XX_PHY=m
 CONFIG_CICADA_PHY=m
 CONFIG_DAVICOM_PHY=m
+CONFIG_DP83TC811_PHY=m
+CONFIG_DP83848_PHY=m
+CONFIG_DP83869_PHY=m
 CONFIG_ICPLUS_PHY=m
-CONFIG_LXT_PHY=m
 CONFIG_LSI_ET1011C_PHY=m
+CONFIG_LXT_PHY=m
 CONFIG_MARVELL_PHY=m
 CONFIG_MARVELL_10G_PHY=m
 CONFIG_MICREL_PHY=y
@@ -845,15 +911,6 @@ CONFIG_NATIONAL_PHY=m
 CONFIG_AT803X_PHY=m
 CONFIG_QSEMI_PHY=m
 CONFIG_ROCKCHIP_PHY=y
-CONFIG_DP83TC811_PHY=m
-CONFIG_DP83848_PHY=m
-CONFIG_DP83869_PHY=m
-CONFIG_MDIO_BITBANG=y
-CONFIG_MDIO_MVUSB=m
-CONFIG_MDIO_MSCC_MIIM=m
-CONFIG_MDIO_IPQ8064=m
-CONFIG_MDIO_BUS_MUX_MULTIPLEXER=m
-CONFIG_MDIO_BUS_MUX_MMIOREG=y
 CONFIG_PPP=m
 CONFIG_PPP_BSDCOMP=m
 CONFIG_PPP_DEFLATE=m
@@ -975,6 +1032,8 @@ CONFIG_IEEE802154_ADF7242=m
 CONFIG_IEEE802154_CA8210=m
 CONFIG_IEEE802154_MCR20A=m
 CONFIG_IEEE802154_HWSIM=m
+CONFIG_XEN_NETDEV_FRONTEND=m
+CONFIG_XEN_NETDEV_BACKEND=m
 CONFIG_VMXNET3=m
 CONFIG_NETDEVSIM=m
 CONFIG_INPUT_POLLDEV=m
@@ -1071,10 +1130,10 @@ CONFIG_RMI4_I2C=m
 CONFIG_RMI4_SPI=m
 CONFIG_RMI4_SMB=m
 CONFIG_SERIO_SERPORT=m
+CONFIG_SERIO_AMBAKMI=y
 CONFIG_LEGACY_PTY_COUNT=0
 CONFIG_SERIAL_8250=y
 # CONFIG_SERIAL_8250_DEPRECATED_OPTIONS is not set
-CONFIG_SERIAL_8250_16550A_VARIANTS=y
 CONFIG_SERIAL_8250_FINTEK=y
 CONFIG_SERIAL_8250_CONSOLE=y
 CONFIG_SERIAL_8250_PCI=m
@@ -1082,6 +1141,11 @@ CONFIG_SERIAL_8250_NR_UARTS=8
 CONFIG_SERIAL_8250_RUNTIME_UARTS=8
 CONFIG_SERIAL_8250_DW=y
 CONFIG_SERIAL_OF_PLATFORM=y
+CONFIG_SERIAL_AMBA_PL010=y
+CONFIG_SERIAL_AMBA_PL010_CONSOLE=y
+CONFIG_SERIAL_AMBA_PL011=y
+CONFIG_SERIAL_AMBA_PL011_CONSOLE=y
+CONFIG_SERIAL_EARLYCON_ARM_SEMIHOST=y
 CONFIG_SERIAL_JSM=m
 CONFIG_SERIAL_SIFIVE=m
 CONFIG_SERIAL_SCCNXP=y
@@ -1126,6 +1190,7 @@ CONFIG_I2C_MUX_PINCTRL=m
 CONFIG_I2C_MUX_REG=m
 CONFIG_I2C_DEMUX_PINCTRL=m
 CONFIG_I2C_MUX_MLXCPLD=m
+CONFIG_I2C_CADENCE=m
 CONFIG_I2C_CBUS_GPIO=m
 CONFIG_I2C_DESIGNWARE_PLATFORM=y
 CONFIG_I2C_RK3X=y
@@ -1147,6 +1212,7 @@ CONFIG_SPI_NXP_FLEXSPI=m
 CONFIG_SPI_GPIO=m
 CONFIG_SPI_FSL_SPI=m
 CONFIG_SPI_OC_TINY=m
+CONFIG_SPI_PL022=y
 CONFIG_SPI_ROCKCHIP=y
 CONFIG_SPI_MXIC=m
 CONFIG_SPI_MUX=m
@@ -1163,7 +1229,6 @@ CONFIG_DP83640_PHY=m
 CONFIG_PTP_1588_CLOCK_INES=m
 CONFIG_PTP_1588_CLOCK_IDT82P33=m
 CONFIG_PTP_1588_CLOCK_IDTCM=m
-CONFIG_PINCTRL=y
 CONFIG_PINCTRL_AS3722=m
 CONFIG_PINCTRL_SINGLE=y
 CONFIG_PINCTRL_SX150X=y
@@ -1176,11 +1241,11 @@ CONFIG_GPIO_ALTERA=m
 CONFIG_GPIO_CADENCE=m
 CONFIG_GPIO_DWAPB=m
 CONFIG_GPIO_EXAR=m
-CONFIG_GPIO_GENERIC_PLATFORM=y
 CONFIG_GPIO_GRGPIO=m
 CONFIG_GPIO_HLWD=m
 CONFIG_GPIO_LOGICVC=m
 CONFIG_GPIO_MB86S7X=m
+CONFIG_GPIO_PL061=y
 CONFIG_GPIO_SAMA5D2_PIOBU=m
 CONFIG_GPIO_XILINX=y
 CONFIG_GPIO_AMD_FCH=m
@@ -1232,7 +1297,12 @@ CONFIG_W1_SLAVE_DS2438=m
 CONFIG_W1_SLAVE_DS250X=m
 CONFIG_W1_SLAVE_DS28E04=m
 CONFIG_W1_SLAVE_DS28E17=m
-CONFIG_POWER_RESET=y
+CONFIG_POWER_AVS=y
+CONFIG_QCOM_CPR=m
+CONFIG_ROCKCHIP_IODOMAIN=y
+CONFIG_POWER_RESET_BRCMSTB=y
+CONFIG_POWER_RESET_VEXPRESS=y
+CONFIG_POWER_RESET_XGENE=y
 CONFIG_POWER_RESET_SYSCON=y
 CONFIG_GENERIC_ADC_BATTERY=m
 CONFIG_CHARGER_ADP5061=m
@@ -1240,6 +1310,7 @@ CONFIG_BATTERY_DS2760=m
 CONFIG_BATTERY_DS2780=m
 CONFIG_BATTERY_DS2781=m
 CONFIG_BATTERY_DS2782=m
+CONFIG_BATTERY_LEGO_EV3=m
 CONFIG_BATTERY_SBS=m
 CONFIG_CHARGER_SBS=m
 CONFIG_MANAGER_SBS=m
@@ -1274,6 +1345,7 @@ CONFIG_SENSORS_ADT7475=m
 CONFIG_SENSORS_AS370=m
 CONFIG_SENSORS_ASC7621=m
 CONFIG_SENSORS_AXI_FAN_CONTROL=m
+CONFIG_SENSORS_ARM_SCPI=m
 CONFIG_SENSORS_ASPEED=m
 CONFIG_SENSORS_ATXP1=m
 CONFIG_SENSORS_DRIVETEMP=m
@@ -1345,6 +1417,7 @@ CONFIG_SENSORS_NCT6775=m
 CONFIG_SENSORS_NCT7802=m
 CONFIG_SENSORS_NCT7904=m
 CONFIG_SENSORS_NPCM7XX=m
+CONFIG_SENSORS_OCC_P8_I2C=m
 CONFIG_SENSORS_PCF8591=m
 CONFIG_PMBUS=m
 CONFIG_SENSORS_ADM1275=m
@@ -1404,6 +1477,7 @@ CONFIG_SENSORS_TMP108=m
 CONFIG_SENSORS_TMP401=m
 CONFIG_SENSORS_TMP421=m
 CONFIG_SENSORS_TMP513=m
+CONFIG_SENSORS_VEXPRESS=m
 CONFIG_SENSORS_VIA686A=m
 CONFIG_SENSORS_VT1211=m
 CONFIG_SENSORS_VT8231=m
@@ -1418,12 +1492,16 @@ CONFIG_SENSORS_W83L786NG=m
 CONFIG_SENSORS_W83627HF=m
 CONFIG_SENSORS_W83627EHF=m
 CONFIG_THERMAL_STATISTICS=y
+CONFIG_THERMAL_WRITABLE_TRIPS=y
 CONFIG_THERMAL_GOV_FAIR_SHARE=y
 CONFIG_THERMAL_GOV_BANG_BANG=y
+CONFIG_THERMAL_GOV_USER_SPACE=y
 CONFIG_CPU_THERMAL=y
+CONFIG_CLOCK_THERMAL=y
 CONFIG_DEVFREQ_THERMAL=y
 CONFIG_THERMAL_EMULATION=y
 CONFIG_THERMAL_MMIO=m
+CONFIG_ROCKCHIP_THERMAL=y
 CONFIG_WATCHDOG=y
 CONFIG_WATCHDOG_SYSFS=y
 CONFIG_SOFT_WATCHDOG=m
@@ -1514,7 +1592,6 @@ CONFIG_IR_SERIAL_TRANSMITTER=y
 CONFIG_IR_SIR=m
 CONFIG_RC_XBOX_DVD=m
 CONFIG_MEDIA_CEC_RC=y
-CONFIG_CEC_GPIO=m
 CONFIG_MEDIA_SUPPORT=m
 CONFIG_VIDEO_FIXED_MINOR_RANGES=y
 CONFIG_MEDIA_USB_SUPPORT=y
@@ -1523,7 +1600,15 @@ CONFIG_DRM_DP_CEC=y
 CONFIG_DRM_I2C_CH7006=m
 CONFIG_DRM_I2C_SIL164=m
 CONFIG_DRM_I2C_NXP_TDA9950=m
+CONFIG_DRM_MALI_DISPLAY=m
 CONFIG_DRM_KOMEDA=m
+CONFIG_DRM_ROCKCHIP=m
+CONFIG_ROCKCHIP_ANALOGIX_DP=y
+CONFIG_ROCKCHIP_CDN_DP=y
+CONFIG_ROCKCHIP_DW_HDMI=y
+CONFIG_ROCKCHIP_DW_MIPI_DSI=y
+CONFIG_ROCKCHIP_INNO_HDMI=y
+CONFIG_ROCKCHIP_LVDS=y
 CONFIG_DRM_RCAR_LVDS=m
 CONFIG_DRM_BOCHS=m
 CONFIG_DRM_VIRTIO_GPU=m
@@ -1540,12 +1625,17 @@ CONFIG_DRM_TI_TPD12S015=m
 CONFIG_DRM_ANALOGIX_ANX6345=m
 CONFIG_DRM_ANALOGIX_ANX78XX=m
 CONFIG_DRM_I2C_ADV7511=m
+CONFIG_DRM_DW_HDMI_CEC=m
 CONFIG_DRM_ETNAVIV=m
+CONFIG_DRM_LIMA=m
+CONFIG_DRM_PANFROST=m
+CONFIG_DRM_TIDSS=m
 CONFIG_FB=y
 CONFIG_FIRMWARE_EDID=y
+CONFIG_FB_ARMCLCD=y
 CONFIG_FB_UVESA=m
 CONFIG_LCD_CLASS_DEVICE=m
-CONFIG_BACKLIGHT_CLASS_DEVICE=y
+# CONFIG_BACKLIGHT_GENERIC is not set
 CONFIG_BACKLIGHT_GPIO=m
 CONFIG_BACKLIGHT_LED=m
 CONFIG_FRAMEBUFFER_CONSOLE=y
@@ -1576,7 +1666,6 @@ CONFIG_SND_ICE1712=m
 CONFIG_SND_MAESTRO3=m
 CONFIG_SND_SONICVIBES=m
 CONFIG_SND_TRIDENT=m
-CONFIG_SND_HDA_PREALLOC_SIZE=64
 CONFIG_SND_USB_AUDIO=m
 CONFIG_SND_USB_UA101=m
 CONFIG_SND_USB_CAIAQ=m
@@ -1593,20 +1682,23 @@ CONFIG_SND_BCM63XX_I2S_WHISTLER=m
 CONFIG_SND_DESIGNWARE_I2S=m
 CONFIG_SND_SOC_FSL_AUDMIX=m
 CONFIG_SND_SOC_FSL_MICFIL=m
+CONFIG_SND_SOC_ROCKCHIP=m
+CONFIG_SND_SOC_ROCKCHIP_PDM=m
+CONFIG_SND_SOC_ROCKCHIP_SPDIF=m
+CONFIG_SND_SOC_ROCKCHIP_MAX98090=m
+CONFIG_SND_SOC_ROCKCHIP_RT5645=m
+CONFIG_SND_SOC_RK3288_HDMI_ANALOG=m
+CONFIG_SND_SOC_RK3399_GRU_SOUND=m
 CONFIG_SND_SOC_XILINX_I2S=m
 CONFIG_SND_SOC_XILINX_AUDIO_FORMATTER=m
 CONFIG_SND_SOC_XILINX_SPDIF=m
 CONFIG_SND_SOC_AC97_CODEC=m
 CONFIG_SND_SOC_ALC5623=m
-CONFIG_SND_SOC_DMIC=m
-CONFIG_SND_SOC_ES8328_I2C=m
-CONFIG_SND_SOC_ES8328_SPI=m
-CONFIG_SND_SOC_MAX98357A=m
 CONFIG_SND_SOC_RK3328=m
 CONFIG_SND_SOC_SIMPLE_AMPLIFIER=m
-CONFIG_SND_SOC_TS3A227E=m
 CONFIG_SND_SIMPLE_CARD=m
 CONFIG_SND_AUDIO_GRAPH_CARD=m
+CONFIG_SND_XEN_FRONTEND=m
 CONFIG_HID_BATTERY_STRENGTH=y
 CONFIG_HIDRAW=y
 CONFIG_UHID=m
@@ -1854,6 +1946,7 @@ CONFIG_USB_CXACRU=m
 CONFIG_USB_UEAGLEATM=m
 CONFIG_USB_XUSBATM=m
 CONFIG_NOP_USB_XCEIV=y
+CONFIG_USB_ULPI=y
 CONFIG_USB_GADGET=y
 CONFIG_U_SERIAL_CONSOLE=y
 CONFIG_USB_AMD5536UDC=m
@@ -1913,6 +2006,7 @@ CONFIG_TYPEC_DP_ALTMODE=m
 CONFIG_MMC=y
 CONFIG_PWRSEQ_SD8787=m
 CONFIG_MMC_BLOCK_MINORS=32
+CONFIG_MMC_ARMMMCI=y
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_OF_ARASAN=y
@@ -1921,6 +2015,11 @@ CONFIG_MMC_SDHCI_CADENCE=y
 CONFIG_MMC_SDHCI_MILBEAUT=m
 CONFIG_MMC_ALCOR=m
 CONFIG_MMC_SPI=y
+CONFIG_MMC_DW=y
+CONFIG_MMC_DW_EXYNOS=y
+CONFIG_MMC_DW_HI3798CV200=m
+CONFIG_MMC_DW_K3=y
+CONFIG_MMC_DW_ROCKCHIP=y
 CONFIG_MMC_REALTEK_PCI=m
 CONFIG_MMC_REALTEK_USB=m
 CONFIG_MMC_HSQ=m
@@ -2003,11 +2102,17 @@ CONFIG_RTC_DRV_MCP795=m
 CONFIG_RTC_DRV_DS3232=m
 CONFIG_RTC_DRV_PCF2127=m
 CONFIG_RTC_DRV_RV3029C2=m
+CONFIG_RTC_DRV_PL031=y
 CONFIG_RTC_DRV_CADENCE=m
 CONFIG_RTC_DRV_HID_SENSOR_TIME=m
 CONFIG_DMADEVICES=y
 CONFIG_ALTERA_MSGDMA=m
+CONFIG_BCM_SBA_RAID=m
 CONFIG_DW_AXI_DMAC=m
+CONFIG_FSL_QDMA=m
+CONFIG_HISI_DMA=m
+CONFIG_MV_XOR_V2=y
+CONFIG_PL330_DMA=y
 CONFIG_PLX_DMA=m
 CONFIG_QCOM_HIDMA_MGMT=y
 CONFIG_QCOM_HIDMA=y
@@ -2027,6 +2132,8 @@ CONFIG_VDPA_SIM=m
 CONFIG_IFCVF=m
 CONFIG_VHOST_NET=m
 CONFIG_VHOST_VDPA=m
+CONFIG_XEN_GNTDEV=y
+CONFIG_XEN_GRANT_DEV_ALLOC=y
 CONFIG_STAGING=y
 CONFIG_RTL8192U=m
 CONFIG_RTLLIB=m
@@ -2040,6 +2147,7 @@ CONFIG_AD9832=m
 CONFIG_AD9834=m
 CONFIG_FB_SM750=m
 CONFIG_STAGING_MEDIA=y
+CONFIG_PHY_ROCKCHIP_DPHY_RX0=m
 CONFIG_FB_TFT=m
 CONFIG_FB_TFT_AGM1264K_FL=m
 CONFIG_FB_TFT_BD663474=m
@@ -2078,19 +2186,30 @@ CONFIG_FIELDBUS_DEV=m
 CONFIG_HMS_ANYBUSS_BUS=m
 CONFIG_WFX=m
 CONFIG_COMMON_CLK_RK808=y
+CONFIG_COMMON_CLK_SCPI=y
 CONFIG_COMMON_CLK_SI544=m
 CONFIG_COMMON_CLK_CS2000_CP=y
 CONFIG_COMMON_CLK_S2MPS11=y
+CONFIG_CLK_QORIQ=y
+CONFIG_COMMON_CLK_XGENE=y
 CONFIG_COMMON_CLK_PWM=y
 CONFIG_COMMON_CLK_BD718XX=m
+CONFIG_MAILBOX=y
+CONFIG_ARM_MHU=y
 CONFIG_PLATFORM_MHU=y
-CONFIG_PM_DEVFREQ=y
-CONFIG_DEVFREQ_GOV_SIMPLE_ONDEMAND=y
+CONFIG_ROCKCHIP_MBOX=y
+CONFIG_ROCKCHIP_IOMMU=y
+CONFIG_ARM_SMMU=y
+CONFIG_ARM_SMMU_V3=y
+CONFIG_SOC_BRCMSTB=y
+CONFIG_ROCKCHIP_PM_DOMAINS=y
+CONFIG_VENDOR_FRIENDLYELEC=y
 CONFIG_DEVFREQ_GOV_PERFORMANCE=m
 CONFIG_DEVFREQ_GOV_POWERSAVE=m
 CONFIG_DEVFREQ_GOV_USERSPACE=m
 CONFIG_DEVFREQ_GOV_PASSIVE=m
-CONFIG_PM_DEVFREQ_EVENT=y
+CONFIG_ARM_RK3328_DMC_DEVFREQ=y
+CONFIG_ARM_RK3399_DMC_DEVFREQ=y
 CONFIG_EXTCON_PTN5150=m
 CONFIG_EXTCON_USB_GPIO=y
 CONFIG_IIO=y
@@ -2146,6 +2265,7 @@ CONFIG_AD7949=m
 CONFIG_AD799X=m
 CONFIG_LTC2496=m
 CONFIG_RN5T618_ADC=m
+CONFIG_ROCKCHIP_SARADC=y
 CONFIG_TI_ADC081C=m
 CONFIG_TI_ADC0832=m
 CONFIG_TI_ADC084S021=m
@@ -2288,20 +2408,35 @@ CONFIG_TSYS01=m
 CONFIG_TSYS02D=m
 CONFIG_MAX31856=m
 CONFIG_PWM=y
+CONFIG_PWM_ROCKCHIP=y
+CONFIG_PHY_XGENE=y
 CONFIG_PHY_CADENCE_TORRENT=m
 CONFIG_PHY_CADENCE_DPHY=m
 CONFIG_PHY_CADENCE_SIERRA=m
 CONFIG_PHY_FSL_IMX8MQ_USB=m
 CONFIG_PHY_MIXEL_MIPI_DPHY=m
 CONFIG_PHY_MAPPHONE_MDM6600=m
+CONFIG_PHY_ROCKCHIP_DP=y
+CONFIG_PHY_ROCKCHIP_EMMC=y
+CONFIG_PHY_ROCKCHIP_INNO_HDMI=y
+CONFIG_PHY_ROCKCHIP_INNO_USB2=y
+CONFIG_PHY_ROCKCHIP_INNO_DSIDPHY=m
+CONFIG_PHY_ROCKCHIP_INNO_USB3=y
+CONFIG_PHY_ROCKCHIP_PCIE=y
+CONFIG_PHY_ROCKCHIP_TYPEC=y
+CONFIG_PHY_ROCKCHIP_USB=y
 CONFIG_PHY_SAMSUNG_USB2=y
+CONFIG_ARM_CCI_PMU=m
+# CONFIG_ARM_CCI400_PMU is not set
+# CONFIG_ARM_CCI5xx_PMU is not set
 CONFIG_DEV_DAX=m
 CONFIG_NVMEM_SPMI_SDAM=m
+CONFIG_ROCKCHIP_EFUSE=y
+CONFIG_ROCKCHIP_OTP=m
 CONFIG_RAVE_SP_EEPROM=m
 CONFIG_MUX_ADG792A=m
 CONFIG_MUX_ADGS1408=m
 CONFIG_MUX_GPIO=m
-CONFIG_MUX_MMIO=m
 CONFIG_COUNTER=m
 CONFIG_FTM_QUADDEC=m
 CONFIG_MOST=m
@@ -2513,7 +2648,6 @@ CONFIG_LSM="lockdown,yama,integrity,apparmor"
 CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
 CONFIG_CRYPTO_USER=m
 CONFIG_CRYPTO_PCRYPT=m
-CONFIG_CRYPTO_CRYPTD=y
 CONFIG_CRYPTO_AUTHENC=y
 CONFIG_CRYPTO_TEST=m
 CONFIG_CRYPTO_ECDH=y
@@ -2570,8 +2704,11 @@ CONFIG_CRYPTO_STATS=y
 CONFIG_CRYPTO_DEV_ATMEL_ECC=m
 CONFIG_CRYPTO_DEV_ATMEL_SHA204A=m
 CONFIG_CRYPTO_DEV_NITROX_CNN55XX=m
+CONFIG_CRYPTO_DEV_CAVIUM_ZIP=m
+CONFIG_CRYPTO_DEV_ROCKCHIP=m
 CONFIG_CRYPTO_DEV_SAFEXCEL=m
 CONFIG_CRYPTO_DEV_CCREE=m
+CONFIG_CRYPTO_DEV_HISI_SEC=m
 CONFIG_CRYPTO_DEV_AMLOGIC_GXL=y
 CONFIG_CRYPTO_DEV_AMLOGIC_GXL_DEBUG=y
 CONFIG_PKCS8_PRIVATE_KEY_PARSER=m
@@ -2582,7 +2719,6 @@ CONFIG_SECONDARY_TRUSTED_KEYRING=y
 CONFIG_SYSTEM_BLACKLIST_KEYRING=y
 CONFIG_CRC4=m
 CONFIG_XZ_DEC_TEST=m
-CONFIG_DMA_PERNUMA_CMA=y
 CONFIG_CMA_SIZE_MBYTES=128
 CONFIG_GLOB_SELFTEST=m
 CONFIG_IRQ_POLL=y
@@ -2597,6 +2733,7 @@ CONFIG_DYNAMIC_DEBUG=y
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_DEBUG_MEMORY_INIT=y
 CONFIG_TEST_LOCKUP=m
+CONFIG_RCU_PERF_TEST=m
 CONFIG_RCU_TORTURE_TEST=m
 CONFIG_RCU_CPU_STALL_TIMEOUT=60
 CONFIG_KUNIT=m
