--- a/defconfig/amlogic_defconfig
+++ b/defconfig/amlogic_defconfig
@@ -1,4 +1,3 @@
-CONFIG_LOCALVERSION=""
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_SYSVIPC=y
 CONFIG_POSIX_MQUEUE=y
@@ -34,6 +33,7 @@ CONFIG_NAMESPACES=y
 CONFIG_USER_NS=y
 CONFIG_CHECKPOINT_RESTORE=y
 CONFIG_SCHED_AUTOGROUP=y
+CONFIG_RELAY=y
 CONFIG_BOOT_CONFIG=y
 CONFIG_EXPERT=y
 CONFIG_KALLSYMS_ALL=y
@@ -637,6 +637,7 @@ CONFIG_CFG80211=m
 CONFIG_CFG80211_DEBUGFS=y
 CONFIG_MAC80211=m
 CONFIG_MAC80211_MESH=y
+CONFIG_MAC80211_DEBUGFS=y
 CONFIG_RFKILL=m
 CONFIG_RFKILL_INPUT=y
 CONFIG_RFKILL_GPIO=m
@@ -1080,13 +1081,11 @@ CONFIG_USB_VL600=m
 CONFIG_USB_NET_CH9200=m
 CONFIG_ADM8211=m
 CONFIG_ATH5K=m
-CONFIG_ATH5K_DEBUG=y
 CONFIG_ATH9K=m
+# CONFIG_ATH9K_PCI is not set
 CONFIG_ATH9K_AHB=y
-CONFIG_ATH9K_DEBUGFS=y
 CONFIG_ATH9K_HTC=m
 CONFIG_ATH9K_HWRNG=y
-CONFIG_ATH9K_COMMON_SPECTRAL=y
 CONFIG_CARL9170=m
 CONFIG_ATH6KL=m
 CONFIG_ATH6KL_SDIO=m
@@ -1095,20 +1094,18 @@ CONFIG_ATH6KL_DEBUG=y
 CONFIG_AR5523=m
 CONFIG_WIL6210=m
 CONFIG_ATH10K=m
-CONFIG_ATH10K_PCI=m
+CONFIG_ATH10K_SDIO=m
 CONFIG_ATH10K_DEBUGFS=y
 CONFIG_WCN36XX=m
 CONFIG_ATMEL=m
-CONFIG_PCI_ATMEL=m
 CONFIG_AT76C50X_USB=m
 CONFIG_B43=m
 CONFIG_B43_SDIO=y
-CONFIG_B43_DEBUG=y
 CONFIG_B43LEGACY=m
+# CONFIG_B43LEGACY_DEBUG is not set
 CONFIG_BRCMSMAC=m
 CONFIG_BRCMFMAC=m
 CONFIG_BRCMFMAC_USB=y
-CONFIG_BRCMFMAC_PCIE=y
 CONFIG_IPW2100=m
 CONFIG_IPW2100_MONITOR=y
 CONFIG_IPW2200=m
@@ -1137,7 +1134,6 @@ CONFIG_PCI_HERMES=m
 CONFIG_ORINOCO_USB=m
 CONFIG_P54_COMMON=m
 CONFIG_P54_USB=m
-CONFIG_P54_PCI=m
 CONFIG_PRISM54=m
 CONFIG_LIBERTAS=m
 CONFIG_LIBERTAS_USB=m
@@ -1149,19 +1145,11 @@ CONFIG_MWIFIEX=m
 CONFIG_MWIFIEX_SDIO=m
 CONFIG_MWIFIEX_PCIE=m
 CONFIG_MWIFIEX_USB=m
-CONFIG_MWL8K=m
 CONFIG_MT7601U=m
 CONFIG_MT76x0U=m
-CONFIG_MT76x0E=m
-CONFIG_MT76x2E=m
 CONFIG_MT76x2U=m
-CONFIG_MT7603E=m
-CONFIG_MT7615E=m
+# CONFIG_WLAN_VENDOR_MICROCHIP is not set
 CONFIG_RT2X00=m
-CONFIG_RT2400PCI=m
-CONFIG_RT2500PCI=m
-CONFIG_RT61PCI=m
-CONFIG_RT2800PCI=m
 CONFIG_RT2500USB=m
 CONFIG_RT73USB=m
 CONFIG_RT2800USB=m
@@ -1169,7 +1157,6 @@ CONFIG_RT2800USB_RT3573=y
 CONFIG_RT2800USB_RT53XX=y
 CONFIG_RT2800USB_RT55XX=y
 CONFIG_RT2800USB_UNKNOWN=y
-CONFIG_RT2X00_LIB_DEBUGFS=y
 CONFIG_RTL8180=m
 CONFIG_RTL8187=m
 CONFIG_RTL8192CE=m
@@ -1182,7 +1169,9 @@ CONFIG_RTL8192EE=m
 CONFIG_RTL8821AE=m
 CONFIG_RTL8192CU=m
 CONFIG_RTL8XXXU=m
+CONFIG_RTL8XXXU_UNTESTED=y
 CONFIG_RSI_91X=m
+# CONFIG_RSI_DEBUGFS is not set
 CONFIG_CW1200=m
 CONFIG_CW1200_WLAN_SDIO=m
 CONFIG_WL1251=m
@@ -1194,7 +1183,6 @@ CONFIG_WLCORE_SPI=m
 CONFIG_WLCORE_SDIO=m
 CONFIG_USB_ZD1201=m
 CONFIG_ZD1211RW=m
-CONFIG_QTNFMAC_PCIE=m
 CONFIG_MAC80211_HWSIM=m
 CONFIG_USB_NET_RNDIS_WLAN=m
 CONFIG_IEEE802154_FAKELB=m
@@ -1843,7 +1831,6 @@ CONFIG_DRM_I2C_SIL164=m
 CONFIG_DRM_I2C_NXP_TDA998X=m
 CONFIG_DRM_HDLCD=m
 CONFIG_DRM_MALI_DISPLAY=m
-CONFIG_DRM_AMDGPU=m
 CONFIG_DRM_VGEM=m
 CONFIG_DRM_UDL=m
 CONFIG_DRM_AST=m
