--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -9,8 +9,9 @@ MOTD="Debian"
 HOSTNAME="computer"
 DISTRO="debian"
 DISTRO_VERSION="buster"
-VERSION="5.10.55"
 UBOOT_VERSION="v2021.07"
+VERSION="5.10.55"
+BUILD_VERSION="1"
 menuconfig="0"
 rc="0"
 crosscompile="1"
@@ -40,21 +41,22 @@ VALUES=$(dialog --ok-label "Submit" --no-cancel \
 	"Distro:"	8 1	"$DISTRO"	  	8 9 24 0 \
 	"Release:"	9 1	"$DISTRO_VERSION"  	9 10 23 0 \
 	""		10 1	""	 		10 14 0 0 \
-        "U-Boot:"   	11 1     "$UBOOT_VERSION"       11 9 10 0 \
-        "Branch:"   	12 1     "$VERSION"        	12 9 10 0 \
-        "RC:"   	13 1     "$rc"	        	13 5 2 0 \
-	"Menuconfig:"	14 1	"$menuconfig"  		14 13 2 0 \
-	"Crosscompile:" 15 1	"$crosscompile" 	15 15 2 0 \
-	"Caching on:"	16 1	"$ccache"	 	16 13 2 0 \
-	""		17 1	""	 		17 14 0 0 \
-	"Wireless"	18 1	""	 		18 14 0 0 \
-	"rtl88XXau:"	19 1	"$rtl88XXau"	 	19 12 2 0 \
-	"rtl88X2bu:"	20 1	"$rtl88X2bu"	 	20 12 2 0 \
-	"rtl88XXcu:"	21 1	"$rtl88XXcu"	 	21 12 2 0 \
-	""		22 1	""	 		22 14 0 0 \
-	"Customize"	23 1	""	 		23 14 0 0 \
-	"Defconfig:"	24 1	"$custom_defconfig" 	24 12 2 0 \
-	"Name:"		25 1	"$MYCONFIG"	  	25 7 27 0 \
+        "U-Boot:"   	11 1    "$UBOOT_VERSION"        11 9 10 0 \
+        "Branch:"   	12 1    "$VERSION"        	12 9 10 0 \
+        "Build:"   	13 1    "$BUILD_VERSION"        13 8 26 0 \
+        "RC:"   	14 1    "$rc"	        	14 5 2 0 \
+	"Menuconfig:"	15 1	"$menuconfig"  		15 13 2 0 \
+	"Crosscompile:" 16 1	"$crosscompile" 	16 15 2 0 \
+	"Caching on:"	17 1	"$ccache"	 	17 13 2 0 \
+	""		18 1	""	 		18 14 0 0 \
+	"Wireless"	19 1	""	 		19 14 0 0 \
+	"rtl88XXau:"	20 1	"$rtl88XXau"	 	20 12 2 0 \
+	"rtl88X2bu:"	21 1	"$rtl88X2bu"	 	21 12 2 0 \
+	"rtl88XXcu:"	22 1	"$rtl88XXcu"	 	22 12 2 0 \
+	""		23 1	""	 		23 14 0 0 \
+	"Customize"	24 1	""	 		24 14 0 0 \
+	"Defconfig:"	25 1	"$custom_defconfig" 	25 12 2 0 \
+	"Name:"		26 1	"$MYCONFIG"	  	26 7 27 0 \
 2>&1 1>&3)
 
 # close fd
@@ -71,6 +73,7 @@ echo DISTRO='"' >> tmp0
 echo DISTRO_VERSION='"' >> tmp0
 echo UBOOT_VERSION='"' >> tmp0
 echo VERSION='"' >> tmp0
+echo BUILD_VERSION='"' >> tmp0
 echo rc= >> tmp0
 echo menuconfig= >> tmp0
 echo crosscompile= >> tmp0
@@ -84,8 +87,9 @@ echo emmc=0 >> tmp0
 echo verbose=0 >> tmp0
 echo auto=1 >> tmp0
 echo aircrack=0 >> tmp0
-echo builder=2.4 >> tmp0
+echo builder=2.5 >> tmp0
 echo '"' > tmp2
+echo '"' >> tmp2
 echo '"' >> tmp2
 echo '"' >> tmp2
 echo '"' >> tmp2
@@ -113,9 +117,9 @@ echo GCC='"'$(gcc --version | grep gcc | awk '{print $4}')'"' >> userdata.txt
 sed -i '1i### USER INFORMATION' userdata.txt
 sed -i '7i### DISTRIBUTION AND RELEASE' userdata.txt
 sed -i '10i### UBOOT AND LINUX KERNEL' userdata.txt
-sed -i '17i### WIRELESS' userdata.txt
-sed -i '21i### CUSTOM' userdata.txt
-sed -i '28i### DO NOT EDIT BELOW THIS LINE' userdata.txt
+sed -i '18i### WIRELESS' userdata.txt
+sed -i '22i### CUSTOM' userdata.txt
+sed -i '29i### DO NOT EDIT BELOW THIS LINE' userdata.txt
 
 # clear screen
 clear
